.happypack/s--113207795
SyntaxError: Unexpected token (22:2)

[0m [90m 20 | [39m
 [90m 21 | [39m  [36mreturn[39m [36mtypeof[39m localStorage[33m.[39mgetItem([32m'token-catalogo'[39m)[33m;[39m
[31m[1m>[22m[39m[90m 22 | [39m  [33m!==[39m[32m'undefined'[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 23 | [39m    [33m?[39m [36mtrue[39m
 [90m 24 | [39m    [33m:[39m [36mfalse[39m[33m;[39m
 [90m 25 | [39m}[0m

BabelLoaderError: SyntaxError: Unexpected token (22:2)

[0m [90m 20 | [39m
 [90m 21 | [39m  [36mreturn[39m [36mtypeof[39m localStorage[33m.[39mgetItem([32m'token-catalogo'[39m)[33m;[39m
[31m[1m>[22m[39m[90m 22 | [39m  [33m!==[39m[32m'undefined'[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 23 | [39m    [33m?[39m [36mtrue[39m
 [90m 24 | [39m    [33m:[39m [36mfalse[39m[33m;[39m
 [90m 25 | [39m}[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)